2011-01-13  Jamison Hope <jrh@theptrgroup.com>

	* srfi95.scm (%sort-vector): Fix return type.

2010-12-27  Per Bothner  <per@bothner.com>

	* numbers.scm (real-valued?, rational-valued?, integer-valued?): New.

2010-12-27  Jamison Hope <jrh@theptrgroup.com>

	* vectors.scm (vector-map, vector-for-each): New procedures.
	* numbers.scm (finite?, infinite?, nan?, exact-integer-sqrt): Likewise.

2010-11-25  Jamison Hope <jrh@theptrgroup.com>

	* lists.scm (assoc): Order of operands to test predicate was
	inconsistent with that specified in SRFI-1.

2010-11-04  Per Bothner  <per@bothner.com>

	* Makefile.am (SCM_COMPILE_FLAGS): Change to use new
	--warn-unknown-member flag.

2010-10-15  Per Bothner  <per@bothner.com>

	* numbers.scm (gcd, lcm):  Change args #!rest array from Object[]
	to integer[], now that the latter works.

	* numbers.scm (number->string): Set explicit return type as string.
	Type inference depends on compilation order, which is bad.

	* numbers.scm (odd?, even?): Remove functions.

2010-08-28  Per Bothner  <per@bothner.com>

	* syntax.scm (identifier-list?, identifier-pair-list? obj):
	Specify that return types are boolean.

2010-08-20  Per Bothner  <per@bothner.com>

	* parameters.scm (parameterize%): Update since setWithSave/setRestore
	no longer take CallContext argument.

2010-07-23  Per Bothner  <per@bothner.com>

	* kawa/hashtable.scm (class hashtable): Added toNodeList
	and toNodeArray methods.

2010-06-14  Per Bothner  <per@bothner.com>

	* misc.scm (namespace-uri, namespace-prefix): New functions.

2010-05-31  Per Bothner  <per@bothner.com>

	* misc.scm (symbol=?, symbol-local-name, symbol-namespace,
	symbol-namespace-uri, symbol-prefix): New functions.

2010-05-19  Per Bothner  <per@bothner.com>

	* misc.scm (namespace): Remove function; "namespace" is now a type
	alias instead.

	* misc.scm (namespace): Handle optional prefix argument.

2010-05-07  Per Bothner  <per@bothner.com>

	* system.scm (compile-file): Set Compilation#explicit.
