@@ -1,3 +1,8 @@
+2011-01-17  Jamison Hope <jrh@theptrgroup.com>
+
+	* kawa/hashtable.scm: Fix various small bugs.
+	* rnrs/hashtables.scm: Likewise.
+
 2011-01-13  Jamison Hope <jrh@theptrgroup.com>
 
 	* srfi95.scm (%sort-vector): Fix return type.
